# chai-projects

./: .gitignore  analysis-of-histogram-equalizer.ipynb  gaussian_blur.c  hist_eql.c  hist_simd.c  sobel_edges.c
GPU-profiling/: profiling-mnist-and-stuff.ipynb
genomics-finetuning/: finetuning-bert-scicite.ipynb  genomics-instuc-gen.ipynb  instruction_dataset.jsonl  llama-genomics-finetuning.ipynb
llama/: README.md
llama/llama-gui/: CMakeLists.txt  imgui.ini  kl_helper.py
llama/llama-gui/src/: benchmark_panel.cpp  benchmark_panel.h  config_panel.cpp  config_panel.h  dashboard.cpp  dashboard.h  gguf_meta.cpp  gguf_meta.h  inference_panel.cpp  inference_panel.h  main.cpp  model_panel_sweep.cpp  model_panel_sweep.h  process_utils.cpp  process_utils.h  storage.cpp  storage.h  telemetry.cpp  telemetry.h  test_gguf_meta  test_gguf_meta.cpp
llama/llm-benchmark/: bench_history.db
llm-architecture-explorer/: README.md  finetune_notebook.ipynb  first_version.ipynb  pyproject.toml
llm-architecture-explorer/scripts/: inspect_local_model.py  run_app.py
llm-architecture-explorer/src/llm_architecture_explorer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llm-architecture-explorer/src/llm_explorer/codegen/: notebook_builder.py  templates.py
llm-architecture-explorer/tests/: test_notebook_builder.py  test_resource_estimator.py  test_tree_builder.py
sobel_gui/: README.md  avx2.json  bench_sobel_edge  bench_sobel_edge.cpp  dashboard  imgui.ini  main_dashboard.cpp  sobel_dashboard.cpp  sobel_dashboard.h  sobel_min.c  sobel_min.h  thread_map.json
(+6 files in other folders)
